Fix password suggestion drop-down flicker.

The dropdown shouldn't be closed on random clicks on Mac.
The focus changes are already handled by the cross-platform code.

Bug: 888491
Change-Id: Ic5d40f7de3ae32270716e2df33e9944a1120bc75
Reviewed-on: https://chromium-review.googlesource.com/c/1264595
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597135}