chrome/browser/ui/views/autofill/autofill_popup_base_view.h
@@ -16,10 +16,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/views/widget/widget_delegate.h"
 #include "ui/views/widget/widget_observer.h"
 
-#if defined(OS_MACOSX)
-#include "ui/base/cocoa/bubble_closer.h"
-#endif
-
 namespace gfx {
 class Point;
 }
@@ -128,13 +124,6 @@ class AutofillPopupBaseView : public views::WidgetDelegateView,
 
   // The time when the popup was shown.
   base::Time show_time_;
-
-#if defined(OS_MACOSX)
-  // Special handler to close the popup on the Mac Cocoa browser.
-  // |parent_widget_| is null on that browser so we can't observe it for
-  // window changes.
-  std::unique_ptr<ui::BubbleCloser> mac_bubble_closer_;
-#endif
 
   base::WeakPtrFactory<AutofillPopupBaseView> weak_ptr_factory_;
 
